--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Poetry'
+- GITenberg
 title: 'The Giant of Bern and Orm Ungerswayne: A Ballad'
 url: http://www.gutenberg.org/ebooks/28818
